# chessd-server

./: .gitignore  Agreement.cc  ComponentListener.cc  ComponentListener.hh  ComponentWrapper.hh  Core.cc  Core.hh  CoreInterface.cc  CoreInterface.hh  Game.cc  Game.hh  GameManager.cc  GameManager.hh  GameProtocol.cc  GameProtocol.hh  GameRoom.cc  GameRoom.hh  INSTALL  INSTALLING  Makefile  Makefile.am  Makefile.in  Match.hh  MatchDatabase.cc  MatchManager.cc  MatchManager.hh  MatchProtocol.cc  MatchProtocol.hh  MatchRule.hh  MatchStandard.cc  MatchStandard.hh  README  README.md  Rating.hh  StreamListener.cc  StreamListener.hh  TeamDatabase.hh  UserManager.cc  UserManager.hh  chessd_protocol_doc.txt  (+63 more)
DataStruct/: Sdb.hh
Pairing/: Player.hh  TourneyPlayers.cc
Threads/: Condition.hh  Dispatcher.cc  Dispatcher.hh  Message.hh  Mutex.hh  Pool.cc  Pool.hh  Queue.hh  RwLock.hh  SafeObject.hh  Semaphore.hh  Task.cc  Task.hh
Util/: IDSet.cc  IDSet.hh  Singleton.hh  Timer.cc  Timer.hh  teste_sdb.cc  utils.hh
XML/: Xml.cc  Xml.hh  iksutil.cc  iksutil.hh  teste_xml.cc
XMPP/: Component.cc  Component.hh  Disco.cc  Disco.hh  Jid.cc  Jid.hh  Muc.cc  Muc.hh  Node.cc  Node.hh  Roster.cc  Roster.hh  Stanza.cc  Stanza.hh  Stream.cc  Stream.hh  handlers.hh
Xml/: xml.hh
database/: database.sql  pgsql.sql
doc/: doxygen.cfg
langs/: en.xml  pt-br.xml  texts_code.xml
pairing/: Game.cc  Tourney.cc  TourneyPlayers.hh
protocol/: game_query.desc  iq.desc  protocolo.txt
src/: AdjournedDatabase.cc  AdjournedDatabase.hh  AdminComponent.cc  AdminComponent.hh  Agreement.cc  Agreement.hh  AnnouncementManager.cc  AnnouncementManager.hh  ChessMatchAnnouncement.cc  ChessMatchAnnouncement.hh  ChessTourney.cc  ChessTourney.hh  ComponentBase.cc  ComponentBase.hh  ComponentWrapper.cc  ComponentWrapper.hh  Core.cc  Core.hh  CoreInterface.cc  CoreInterface.hh  DatabaseInterface.cc  DatabaseInterface.hh  DatabaseManager.cc  DatabaseManager.hh  Exception.hh  Game.cc  Game.hh  GameBlitz.cc  GameBlitz.hh  GameChess.cc  GameChess.hh  GameDatabase.cc  GameDatabase.hh  GameException.hh  GameLightning.cc  GameLightning.hh  GameManager.cc  GameManager.hh  GameProtocol.cc  GameProtocol.hh  (+64 more)
src/Pairing/: Game.cc  Game.hh  Player.cc  Player.hh  Tourney.cc  Tourney.hh  TourneyPlayers.cc  TourneyPlayers.hh
src/Threads/: Condition.hh  Dispatcher.cc  Dispatcher.hh  Message.hh  Mutex.hh  Pool.cc  Pool.hh  Queue.hh  RwLock.hh  SafeObject.hh  Semaphore.hh  Task.cc  Task.hh  Thread.cc  (+1 more)
tools/: auth_chessd.py
(+74 files in other folders)
