AUTOMAKE_OPTIONS = foreign

bin_PROGRAMS=chessd
chessd_CXXFLAGS=-Isrc @IKSEMEL_CFLAGS@ @PQXX_CFLAGS@
chessd_LDADD=@IKSEMEL_LIBS@ @PQXX_LIBS@
chessd_SOURCES=""
chessd_SOURCES += src/AdminComponent.cc
chessd_SOURCES += src/Agreement.cc
chessd_SOURCES += src/ChessTourney.cc
chessd_SOURCES += src/ComponentBase.cc
chessd_SOURCES += src/DatabaseInterface.cc
chessd_SOURCES += src/DatabaseManager.cc
chessd_SOURCES += src/Game.cc
chessd_SOURCES += src/GameChess.cc
chessd_SOURCES += src/ServerCore.cc
chessd_SOURCES += src/GameRoom.cc
chessd_SOURCES += src/GlickoSystem.cc
chessd_SOURCES += src/HistoryProcess.cc
chessd_SOURCES += src/I18n.cc
chessd_SOURCES += src/libchess/Board.cc
chessd_SOURCES += src/libchess/ChessBasedGame.cc
chessd_SOURCES += src/libchess/Chess.cc
chessd_SOURCES += src/libchess/ChessMove.cc
chessd_SOURCES += src/libchess/History.cc
chessd_SOURCES += src/libchess/Piece.cc
chessd_SOURCES += src/libchess/State.cc
chessd_SOURCES += src/main.cc
chessd_SOURCES += src/MatchChess.cc
chessd_SOURCES += src/MatchDatabase.cc
chessd_SOURCES += src/MatchManager.cc
chessd_SOURCES += src/Pairing/TourneyGame.cc
chessd_SOURCES += src/Pairing/Player.cc
chessd_SOURCES += src/Pairing/Tourney.cc
chessd_SOURCES += src/Pairing/TourneyPlayers.cc
chessd_SOURCES += src/ProfileManager.cc
chessd_SOURCES += src/Threads/Dispatcher.cc
chessd_SOURCES += src/Threads/Pool.cc
chessd_SOURCES += src/Threads/Task.cc
chessd_SOURCES += src/Util/Identifier.cc
chessd_SOURCES += src/Util/IDSet.cc
chessd_SOURCES += src/Util/Log.cc
chessd_SOURCES += src/Util/Timer.cc
chessd_SOURCES += src/XML/iksutil.cc
chessd_SOURCES += src/XML/Xml.cc
chessd_SOURCES += src/XMPP/Component.cc
chessd_SOURCES += src/XMPP/Disco.cc
chessd_SOURCES += src/XMPP/Jid.cc
chessd_SOURCES += src/XMPP/Muc.cc
chessd_SOURCES += src/XMPP/Node.cc
chessd_SOURCES += src/XMPP/PartialJid.cc
chessd_SOURCES += src/XMPP/RootNode.cc
chessd_SOURCES += src/XMPP/Roster.cc
chessd_SOURCES += src/XMPP/StanzaBase.cc
chessd_SOURCES += src/XMPP/Stanza.cc
chessd_SOURCES += src/XMPP/Stream.cc
chessd_SOURCES += src/MatchFactory.cc
chessd_SOURCES += src/Util/Date.cc
chessd_SOURCES += src/Threads/Thread.cc
chessd_SOURCES += src/TourneyManager.cc
chessd_SOURCES += src/ServerModule.cc
chessd_SOURCES += src/ChessMatchAnnouncement.cc
chessd_SOURCES += src/MatchAnnouncementFactory.cc
chessd_SOURCES += src/AnnouncementManager.cc
chessd_SOURCES += src/sha1.cc
